=== master

* Support to_tsquery: :websearch option to Dataset#full_text_search on PostgreSQL 11+ (jeremyevans) (#2075)

* Add MassAssignmentRestriction#model and #column for getting the model instance and related column for mass assignment errors (artofhuman, jeremyevans) (#2079)

* Stop using base64 library in column_encryption plugin (jeremyevans)

=== 5.72.0 (2023-09-01)

* Sort caches before marshalling when using schema_caching, index_caching, static_cache_cache, and pg_auto_constraint_validations (jeremyevans)

* Change the defaults_setter plugin do a deep-copy of database default hash/array values and delegates (jeremyevans) (#2069)

* Add pg_auto_parameterize_in_array extension, for converting IN/NOT IN to = ANY or != ALL for more types (jeremyevans)

* Fix literalization of infinite and NaN float values in PostgreSQL array bound variables (jeremyevans)

=== 5.71.0 (2023-08-01)

* Support ILIKE ANY on PostgreSQL by not forcing the use of ESCAPE for ILIKE (gilesbowkett) (#2066)

* Add pg_xmin_optimistic_locking plugin for optimistic locking for all models without database changes (jeremyevans)

* Recognize the xid PostgreSQL type as an integer type in the jdbc/postgresql adapter (jeremyevans)

* Make set_column_allow_null method reversible in migrations (enescakir) (#2060)

=== 5.70.0 (2023-07-01)

* Make static_cache plugin better handle cases where forbid_lazy_load plugin is already loaded (jeremyevans)

* Fix ShardedThreadedConnectionPool#remove_server to disconnect all connections if removing multiple servers (jeremyevans)

* Support SEQUEL_DEFAULT_CONNECTION_POOL environment variable for choosing connection pool when :pool_class Database option is not set (jeremyevans)

* Add sharded_timed_queue connection pool (jeremyevans)

* Make connection_{validator,expiration} and async_thread_pool extensions work with timed_queue connection pool (jeremyevans)
