@@ -3016,3 +3016,80 @@ describe "column_encryption plugin" do
     end
   end if DB.database_type == :postgres
 end if RUBY_VERSION >= '2.3' && (begin; require 'sequel/plugins/column_encryption'; true; rescue LoadError; false end)
+
+describe "paged_update_delete plugin" do
+  before(:all) do
+    @db = DB
+    @db.create_table!(:pud_test) do
+      Integer :id, :primary_key=>true
+      Integer :o, :null=>false
+    end
+    @model = Class.new(Sequel::Model)
+    @model.set_dataset @db[:pud_test]
+    @model.plugin :paged_update_delete
+    @sizes = [1, 2, 3, 10, 11, 98, 99, 100, 101]
+  end
+  before do
+    100.times{|i| @model.insert(:id=>i+1, :o=>i)}
+  end
+  after do
+    @model.dataset.delete
+  end
+  after(:all) do
+    @db.drop_table?(:pud_test)
+  end
+
+  it "Model#paged_delete should work on unfiltered dataset" do
+    @sizes.each do |rows|
+      @db.transaction(:rollback=>:always) do
+        @model.paged_update_delete_size(rows).paged_delete.must_equal 100
+        @model.count.must_equal 0
+      end
+    end
+    @model.paged_delete.must_equal 100
+    @model.count.must_equal 0
+  end
+
+  it "Model#paged_update should work on unfiltered dataset" do
+    expected = 100.times.map{|i| [i+1, i+200]}
+    @sizes.each do |rows|
+      @db.transaction(:rollback=>:always) do
+        @model.paged_update_delete_size(rows).paged_update(:o=>Sequel[:o] + 200).must_equal 100
+        @model.select_order_map([:id, :o]).must_equal expected
+      end
+    end
+    @model.paged_update(:o=>Sequel[:o] + 200).must_equal 100
+    @model.select_order_map([:id, :o]).must_equal expected
+  end
+
+  it "Model#paged_delete should work on filtered dataset" do
+    ds = @model.where{id < 50}
+    @sizes.each do |rows|
+      @db.transaction(:rollback=>:always) do
+        ds.paged_update_delete_size(rows).paged_delete.must_equal 49
+        ds.count.must_equal 0
+        @model.count.must_equal 51
+      end
+    end
+    ds.paged_delete.must_equal 49
+    ds.count.must_equal 0
+    @model.count.must_equal 51
+  end
+
+  it "Model#paged_update should work on filtered dataset" do
+    ds = @model.where{id < 50}
+    ds_expected = 49.times.map{|i| [i+1, i+200]}
+    other = @model.exclude{id < 50}
+    other_expected = 51.times.map{|i| [i+50, i+49]}
+    @sizes.each do |rows|
+      @db.transaction(:rollback=>:always) do
+        ds.paged_update_delete_size(rows).paged_update(:o=>Sequel[:o] + 200).must_equal 49
+        ds.select_order_map([:id, :o]).must_equal ds_expected
+        other.select_order_map([:id, :o]).must_equal other_expected
+      end
+    end
+    ds.paged_update(:o=>Sequel[:o] + 200).must_equal 49
+    ds.select_order_map([:id, :o]).must_equal ds_expected
+    other.select_order_map([:id, :o]).must_equal other_expected
+  end
+end
