@@ -463,6 +463,10 @@
 <span class="ul__span">Allows Sequel::Model classes to implement PostgreSQL row-valued/composite types.</span>
 </li>
 <li class="ul__li ul__li--grid">
+<a class="a" href="rdoc-plugins/classes/Sequel/Plugins/PagedUpdateDelete.html">paged_update_delete </a>
+<span class="ul__span">Allows updating and deleting a large dataset using multiple queries to reduce the amount of time the table is locked.</span>
+</li>
+<li class="ul__li ul__li--grid">
 <a class="a" href="rdoc-plugins/classes/Sequel/Plugins/PrimaryKeyLookupCheckValues.html">primary_key_lookup_check_values </a>
 <span class="ul__span">Typecasts and checks values in allowed range during lookups by primary key.</span>
 </li>
